McStas-2.5_CPU_MPICC/Test_Pol_Mirror/compile_stdout.txt
INFO: No output directory specified (--dir)
INFO: Using directory: "Test_Pol_Mirror_20200226_192133"
INFO: Regenerating c-file: Test_Pol_Mirror.c
Warning: Using DEFINITION parameter of component Pol_mirror() (potential syntax error) at line /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Mirror/Test_Pol_Mirror.instr:61
  rUpPar={ 1.0 , 0.0219 , 6.07 , 2.0 , 0.003 }
Warning: Using DEFINITION parameter of component Pol_mirror() (potential syntax error) at line /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Mirror/Test_Pol_Mirror.instr:61
  rDownPar={ 0.1 , 0.0219 , 6.07 , 2.0 , 0.003 }
CFLAGS=
INFO: Recompiling: ./Test_Pol_Mirror.out
/zhome/89/0/38697/McStas/mcstas/2.5/tools/Python/mcrun/../mccodelib/../../../optics/Pol_mirror.comp:121:19: warning: ISO C99 requires whitespace after the macro name
   if ((zwidth<=0) || (yheight <= 0)) {
                   ^
INFO: ===
[n-62-31-16:213089] mca_base_component_repository_open: unable to open mca_plm_lsf: libbat.so: cannot open shared object file: No such file or directory (ignored)
[n-62-31-16:213089] mca_base_component_repository_open: unable to open mca_ras_lsf: libbat.so: cannot open shared object file: No such file or directory (ignored)
--------------------------------------------------------------------------
By default, for Open MPI 4.0 and later, infiniband ports on a device
are not used by default.  The intent is to use UCX for these devices.
You can override this policy by setting the btl_openib_allow_ib MCA parameter
to true.

  Local host:              n-62-31-16
  Local adapter:           mlx5_0
  Local port:              1

--------------------------------------------------------------------------
--------------------------------------------------------------------------
WARNING: There was an error initializing an OpenFabrics device.

  Local host:   n-62-31-16
  Local device: mlx5_0
--------------------------------------------------------------------------
begin instrument: Test_Pol_Mirror
  Creator: McStas 2.5 - Feb. 26, 2020
  Source: /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Mirror/Test_Pol_Mirror.instr
  Parameters:  mirrorOption(int)
  Trace_enabled: yes
  Default_main: yes
  Embedded_runtime: yes
end instrument
begin simulation: .
  Format: McStas
  URL: http://www.mccode.org
  Creator: McStas 2.5 - Feb. 26, 2020
  Instrument: /zhome/89/0/38697/once/McStas-2.5_CPU_MPICC/Test_Pol_Mirror/Test_Pol_Mirror.instr
  Ncount: 1000000
  Trace: no
  Gravitation: no
  Seed: 1582954384
  Directory: .
  Param: mirrorOption=1
end simulation
info!
